[gd_scene load_steps=2 format=3 uid="uid://crjw3oeh5kveo"]

[ext_resource type="Script" path="res://menu.gd" id="1_j5ro4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5ro4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Fractals" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "FRACTALS"

[node name="Midpoint" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "MIDPOINT DISPLACEMENT"

[node name="Bezier" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "BEZIER CURVES"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Fractals" to="." method="_on_fractals_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Midpoint" to="." method="_on_midpoint_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bezier" to="." method="_on_bezier_pressed"]
